--- a/jiujitsuleague/main_app/templates/tournaments.html
+++ b/jiujitsuleague/main_app/templates/tournaments.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Tournaments</title>
-</head>
-<body>
-  Hello Tournaments
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+
+<h1>Tournaments</h1>
+<hr />
+<p>Get in the tournaments bruh</p>
+
+{% endblock %}
